# databricks-lakebase-app-demo

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  PROJECTPLAN.md  README.md  TALK_TRACK.md  cleanup.sh  databricks.yml  deploy.sh  pyproject.toml
resources/: app.yml  data_gen_job.yml  deploy_agent_job.yml  lakebase_setup_job.yml  pipeline.yml  sync_job.yml
src/agent/: agent.py  config.yml  pyproject.toml  tools.py
src/app/: .gitignore  README.md  app.yml  build.sh  databricks.yml  package.json  pyproject.toml  tsconfig.json  vite.config.ts
src/app/src/db_residential_copilot/backend/: agent.py  models.py  router.py
src/app/src/db_residential_copilot/backend/core/: _config.py  _defaults.py  _factory.py  _static.py  dependencies.py  lakebase.py
src/app/src/ui/: index.html  main.tsx  routeTree.gen.ts
src/app/src/ui/lib/: api.ts
src/app/src/ui/routes/: __root.tsx  copilot.tsx  deals.tsx  index.tsx  portfolio.tsx
src/app/src/ui/styles/: globals.css
src/app/src/ui/types/: routeTree.gen.ts
src/notebooks/: 01_generate_sample_data.ipynb  02_setup_lakebase.ipynb  03_sync_gold_to_lakebase.ipynb  04_register_agent.ipynb  cleanup.ipynb
src/pipelines/db_residential_sdp/transformations/: bronze_properties.sql  bronze_rents.sql  gold_portfolio_property_metrics.sql  gold_portfolio_time_series.sql  silver_properties.sql  silver_rents.sql
